Added grp assg 2 files

--- a/Assg2_Logistic_Regression_COVID/Group3_Assg_LOGIT_COVID.ipynb
+++ b/Assg2_Logistic_Regression_COVID/Group3_Assg_LOGIT_COVID.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imputation of Missing Data (Group Assignment)"
+    "## Logistic Regression - COVID-19"
    ]
   },
   {
@@ -23,30 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Date: 07/14/2020"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Question 1: What are three ways to handle missing data?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Answer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Question 2: Why is imputation considered to be one of the best if appropriate for the data?"
+    "### Introductory Paragraph:"
    ]
   },
   {
@@ -55,7 +32,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Answer"
+    "## Implement the model discussed in the post."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 1: If you were asked to perform the analysis on other states such as North Carlolina, can you obtain the data?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Are there any problems with state level data or is it all reported in exactly the same way?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Answer: "
    ]
   },
   {
